--- a/html/aproposdemoi.html
+++ b/html/aproposdemoi.html
@@ -36,7 +36,7 @@
 
             <p>
               Suite à une reconversion professionnelle, j'ai souhaité me diriger
-              vers un domaine porteur du numérique.Actuellement en formation au
+              vers un domaine porteur du numérique. Actuellement en formation au
               le Titre Professionnel : Développeur Web et Web mobile; je
               recherche un stage pour 13 semaines au sein d'une entreprise web.
               Le stage débuterait le 17 octobre 2022 et finirait le 20 janvier
@@ -44,7 +44,7 @@
             </p>
             <br />
             <p>
-              Cette expérience en milieu profesionnelle me permettrait
+              Cette expérience en milieu professionnelle me permettrait
               d’acquérir plus d’autonomie ; je pourrais ainsi renforcer ce que
               j’ai appris lors de ma formation professionnelle, et étoffer mon
               panel de compétences.
